--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,3 +95,12 @@
 .animate-fadeIn {
   animation: fadeIn 0.5s ease-in-out;
 }
+
+.editor .ProseMirror {
+  min-height: 100px;
+  padding: 5px 10px;
+}
+
+.ProseMirror:focus {
+  outline: none;
+}
